--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
-remote_theme: daviddarnes/alembic@main
+remote_theme: pages-themes/minimal@v0.2.0
+
 plugins:
-- jekyll-remote-theme
+  - jekyll-remote-theme
 
 title: Hortense Utuje
 description: Simple client interfaces to a computer vision API
